Refactor presskit section in index.html

--- a/index.html
+++ b/index.html
@@ -444,21 +444,29 @@
   </section>
 
   <!-- PRESSKIT -->
-  <section id="presskit" class="section reveal section-centered" aria-labelledby="presskit-title">
-    <h2 id="presskit-title" data-animate="heading">PRESSKIT</h2>
+<section id="presskit" class="section reveal section-centered" aria-labelledby="presskit-title">
+  <h2 id="presskit-title" data-animate="heading">PRESSKIT</h2>
 
-    <div class="press-shell">
-      <div class="press-copy">
-        <p>
-          Para medios, promoters y clubes que necesiten información puntual, fotos y ficha técnica,
-          podés descargar el presskit completo. Incluye biografía corta, ficha técnica y selección
-          de fotos para prensa.
-        </p>
+  <div class="press-shell">
+    <div class="press-copy">
+      <p>
+        Para medios, promoters y clubes que necesiten información puntual, fotos y ficha técnica,
+        podés descargar el presskit completo. Incluye biografía corta, ficha técnica y selección
+        de fotos para prensa.
+      </p>
 
-        <a href="img/press.zip" class="mp-btn primary">
-          DESCARGAR PRESSKIT
-        </a>
-      </div>
+      <a href="img/press.zip" class="mp-btn primary">
+        DESCARGAR PRESSKIT
+      </a>
+    </div>
+
+    <div class="press-preview">
+      <div class="press-layer press-img-1"></div>
+      <div class="press-layer press-img-2"></div>
+      <div class="press-layer press-img-3"></div>
+    </div>
+  </div>
+</section>
 
       <div class="press-preview">
         <!-- Acá después reemplazás los fondos por tus fotos:
