--- a/presskit.html
+++ b/presskit.html
@@ -4,24 +4,59 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Presskit — Manu Pavez</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta name="description" content="Presskit oficial de Manu Pavez: bio pro, fotos, logos y assets." />
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/components.css">
+  <link rel="stylesheet" href="css/pages/presskit.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <script defer src="js/supabase-config.js"></script>
+  <script type="module" src="js/main.js"></script>
 </head>
 
-<body>
-<header class="site-header">
+<body data-page="presskit">
+<header class="site-header fixed" role="banner">
   <div class="header-inner">
-    <a href="index.html" class="brand"><img src="logos/CUBO BLANCO MP.png" alt="Manu Pavez"></a>
-    <nav class="nav">
-      <a href="bio.html">STORYTELLER</a>
+    <a class="brand" href="index.html#inicio" aria-label="Ir al inicio">
+      <img src="logos/CUBO BLANCO MP.png" alt="Manu Pavez" onerror="this.style.display='none'">
+    </a>
+
+    <nav class="nav" role="navigation" aria-label="Navegación principal">
+      <a href="index.html#inicio">INICIO</a>
+      <a href="index.html#musica">MÚSICA</a>
+      <a href="index.html#sellos">SELLOS</a>
+      <a href="index.html#en-vivo">EN VIVO</a>
+      <a href="index.html#lab">FREQUENCY LAB</a>
       <a href="clinicas.html">CLÍNICAS</a>
-      <a href="booking.html">BOOKING</a>
-      <a href="contacto.html">CONTACTO</a>
+      <a href="bio.html">SOBRE MANU</a>
+      <a href="presskit.html" class="is-active">PRESSKIT</a>
+      <a href="index.html#booking" class="cta-book">BOOKING</a>
     </nav>
+
+    <div class="header-actions">
+      <a href="index.html#booking" class="header-cta">BOOKING</a>
+      <button class="menu-toggle" data-nav-toggle aria-controls="mobile-nav" aria-expanded="false" aria-label="Abrir menú móvil" type="button">
+        <span class="burger" aria-hidden="true"></span>
+      </button>
+    </div>
   </div>
+
+  <nav id="mobile-nav" class="mobile-nav" data-nav-panel hidden aria-label="Menú móvil">
+    <a href="index.html#inicio">INICIO</a>
+    <a href="index.html#musica">MÚSICA</a>
+    <a href="index.html#sellos">SELLOS</a>
+    <a href="index.html#en-vivo">EN VIVO</a>
+    <a href="index.html#lab">FREQUENCY LAB</a>
+    <a href="clinicas.html">CLÍNICAS</a>
+    <a href="bio.html">SOBRE MANU</a>
+    <a href="presskit.html">PRESSKIT</a>
+    <a href="index.html#booking">BOOKING</a>
+    <a href="mailto:manupavez22@gmail.com?subject=Manu%20Pavez%20-%20Contacto/Booking" class="mobile-book">MAIL DIRECTO</a>
+  </nav>
 </header>
 
 <main class="presskit">
-  <section class="bio">
+  <section class="bio" data-sb-block="presskit_bio">
     <h1>PRESSKIT</h1>
     <h2>Biografía Profesional</h2>
     <p>
@@ -38,19 +73,18 @@
   </section>
 
   <!-- SLIDER -->
-  <section class="slider" aria-label="Galería de fotos">
-    <div class="slides">
-      <img src="img/fotos/slide1.png" alt="Manu Pavez slide 1" class="active">
-      <img src="img/fotos/slide2.png" alt="Manu Pavez slide 2">
-      <img src="img/fotos/slide3.png" alt="Manu Pavez slide 3">
-      <img src="img/fotos/slide4.png" alt="Manu Pavez slide 4">
+  <section class="slider" data-slider="presskit" data-autoplay="5500" aria-label="Galería de fotos">
+    <div class="slides" data-sb="presskit-slides">
+      <img src="img/press/press1.jpg" alt="Presskit photo 1" class="active">
+      <img src="img/press/press2.jpg" alt="Presskit photo 2">
+      <img src="img/press/press3.jpg" alt="Presskit photo 3">
     </div>
     <div class="slider-dots"></div>
   </section>
 
   <!-- BOTÓN DE DESCARGA -->
   <section class="press-download">
-    <a href="img/press.zip" class="mp-btn primary" download>DESCARGAR PRESSKIT</a>
+    <a href="#" class="mp-btn primary" data-sb="presskit-download" download>DESCARGAR PRESSKIT</a>
   </section>
 </main>
 
@@ -61,6 +95,5 @@
   </div>
 </footer>
 
-<script src="js/slider.js"></script>
 </body>
 </html>
