--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
   <link rel="stylesheet" href="css/responsive.css" />
 
   <!-- Scripts -->
-  <script defer src="js/slider.js"></script>
-  <script defer src="js/main.js"></script>
-  <script src="js/supabase-config.js"></script>
-  <script type="module" src="js/app.js"></script>
+ <script defer src="/js/supabase-config.js"></script>
+<script type="module" src="/js/main.js"></script>
 </head>
 
 <body>
