CSS UPDATES PRO

--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
         <header class="section-head">
           <h2 id="musica-title" data-animate="heading">MÚSICA · DIARIOS</h2>
           <p class="muted">
-            Algunos lanzamientos que ordenan etapas del camino. Portadas claras, pocas palabras
-            y links directos a donde tiene que sonar.
+            Historia en la música: lanzamientos, remixes y colaboraciones que muestran el camino recorrido.
           </p>
         </header>
 
