UPDATE IG INDEX.

--- a/index.html
+++ b/index.html
@@ -342,15 +342,12 @@
       <p class="muted">Clips cortos, work in progress y fragmentos del día a día alrededor de la música.</p>
 
       <div class="ig-wrap ig-card">
-        <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-        <iframe
-          src="https://lightwidget.com/widgets/d4159941fe3b5f3f8260daff5de5ba95.html"
-          scrolling="no"
-          allowtransparency="true"
-          class="lightwidget-widget"
-          title="Instagram de Manu Pavez"
-          loading="lazy"
-        ></iframe>
+ <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+ <iframe src="//lightwidget.com/widgets/8b190ae484f25e67ae9aac82b723387a.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;">
+  
+ </iframe>
+
+
       </div>
     </section>
   </main>
